# VoyageurCompass

./: .bandit  .coveragerc  .dockerignore  .editorconfig  .env.development.template  .env.example  .env.production  .env.production.template  .env.staging.template  .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CI-CD-IMPLEMENTATION.md  CODE_QUALITY_VERIFICATION_PLAN.md  Dockerfile  Dockerfile.prod  Dockerfile.production  PHASE_5.2_COMPLETION_REPORT.md  SECURITY.md  TESTING.md  conftest.py  docker-compose.blue.yml  docker-compose.green.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  lighthouserc.json  manage.py  performance_baselines.json  performance_test.db  pyproject.toml  pytest.ini  relocate-security-output.md  requirements.txt  run_tests.sh  security-hardening-output.md  test_enhanced_report.html  test_enhanced_report.json  test_results.md  (+1 more)
.zap/: rules.tsv
Analytics/: apps.py  async_views.py  explanation_views.py  finetuning_views.py  health_views.py  monitoring_views.py  quality_views.py  sentiment_views.py  status_views.py  urls.py  views.py  views_batch.py
Core/: admin.py  apps.py  backends.py  caching.py  connection_pool.py  logging_config.py  middleware.py  models.py  pagination.py  serializers.py  urls.py  views.py
Data/: API_DOCUMENTATION.md  __init__.py  apps.py  managers.py  market_views.py  models.py  quality_views.py  serializers.py  urls.py  views.py
Design/: __init__.py  apps.py  urls.py  utils.py  views.py
Temp/: .gitkeep
VoyageurCompass/: __init__.py  asgi.py  celery.py  performance_test_settings.py  settings.py  test_settings.py  urls.py  wsgi.py
config/: Dockerfile  docker-compose.yml  pytest.ini  requirements-base.txt  requirements-ci.txt  requirements-dev.txt  requirements-ml.txt  requirements.txt
deployment/: Dockerfile
docs/: API_DOCUMENTATION.md  CACHE_PERFORMANCE_OPTIMIZATION.md  CI_CD_TROUBLESHOOTING.md  DEVELOPMENT_SETUP.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TESTING_STANDARDS.md  LLM_INTEGRATION_PROGRESS.md  MULTILINGUAL_SUPPORT_GUIDE.md  README.md  TESTING_GUIDE.md
infrastructure/: Dockerfile  Dockerfile.base  Dockerfile.ml  README.md  docker-compose.hybrid.yml  docker-compose.yml  docker-rebuild.sh  docker-start.sh  docker-stop.sh  download_finbert.py  gpu_detection.py  smoke_tests.py  start_optimized.py
nginx/: Dockerfile
redis/: redis.conf
(+488 files in other folders)
